# cakemake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  runner.cmake  test.cmake
.github/actions/alpine-cmake/: Dockerfile
.github/actions/cmake/: cmake.yml
.github/workflows/: build-and-test.yml  ci.yml
clang/: CMakeLists.txt
gcc/: CMakeLists.txt  lsan-suppressions.txt
src/: a.cmake  compiler-defaults.cmake  compiler.cmake  flags.cmake  util.cmake
src/compiler/: clang.cmake  gnu.cmake
tcc/: CMakeLists.txt
test/: compiler-defaults.cmake  compiler.cmake  example.cmake  example2.cmake  flags.cmake  util.cmake
test/compiler/: clang.cmake  gnu.cmake
